fix spacing on about login and signup page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -192,7 +192,6 @@ overflow: hidden;
 .edit_hero {
 background-size: cover;
 overflow: hidden;
-height:45em;
 }
 
 
@@ -431,7 +430,6 @@ border: 1px solid rgba(81, 203, 238, 1);
   margin-top: 2.5em;
   border-bottom: 1px solid #eeeeee;
   padding: 2em;
-  padding-bottom:4em;
 }
 
 #about_container_1_subtext p {
@@ -1544,7 +1542,7 @@ margin-top: -.5em;
 
 #about-subtext{
 color: #fff;
-margin-top: -32em;
+margin-top: -25em;
 float: right;
 text-align: right;
 opacity: 0.5;
